apps/data/garage/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
