apps/data/garage/manifests/sts-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: garage
  namespace: data
spec:
  template:
    spec:
